// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`jest@<=12 1`] = `
{
  "name": "jest",
  "value": "<=12",
}
`;

exports[`jest@<12 1`] = `
{
  "name": "jest",
  "value": "<12",
}
`;

exports[`jest@>=12 1`] = `
{
  "name": "jest",
  "value": ">=12",
}
`;

exports[`jest@>12 1`] = `
{
  "name": "jest",
  "value": ">12",
}
`;

exports[`jest@^12 1`] = `
{
  "name": "jest",
  "value": "^12.1.1",
}
`;

exports[`jest@12 1`] = `
{
  "name": "jest",
  "value": "12.1.1",
}
`;
